--- a/package.json
+++ b/package.json
@@ -1,73 +1,59 @@
 {
-  "name": "@coreui/coreui-free-react-admin-template-cra",
-  "version": "5.0.0",
+  "name": "@coreui/coreui-free-react-admin-template",
+  "version": "5.2.0",
   "description": "CoreUI Free React Admin Template",
   "homepage": ".",
   "bugs": {
-    "url": "https://github.com/coreui/coreui-free-react-admin-template-cra/issues"
+    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template-cra.git"
+    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
   },
   "license": "MIT",
   "author": "The CoreUI Team (https://github.com/orgs/coreui/people)",
   "scripts": {
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
+    "build": "vite build",
     "lint": "eslint \"src/**/*.js\"",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "test:cov": "npm test -- --coverage --watchAll=false",
-    "test:debug": "react-scripts --inspect-brk test --runInBand"
+    "serve": "vite preview",
+    "start": "vite"
   },
   "dependencies": {
     "@coreui/chartjs": "^4.0.0",
-    "@coreui/coreui": "^5.0.0",
+    "@coreui/coreui": "^5.2.0",
     "@coreui/icons": "^3.0.1",
-    "@coreui/icons-react": "^2.2.1",
-    "@coreui/react": "^5.0.0",
+    "@coreui/icons-react": "^2.3.0",
+    "@coreui/react": "^5.4.1",
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
-    "core-js": "^3.36.1",
+    "core-js": "^3.39.0",
+    "date-fns": "^4.1.0",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-app-polyfill": "^3.0.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
+    "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^7.5.0",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.28.0",
     "redux": "5.0.1",
-    "simplebar-react": "^3.2.4"
+    "simplebar-react": "^3.2.6",
+    "tailgrids": "^2.2.7"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
-    "@testing-library/user-event": "^14.5.2",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "3.2.5",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.72.0",
-    "web-vitals": "^3.5.2"
-  },
-  "engines": {
-    "node": ">=10",
-    "npm": ">=6"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "postcss": "^8.4.49",
+    "prettier": "3.3.3",
+    "sass": "^1.81.0",
+    "tailwindcss": "^3.4.15",
+    "vite": "^5.4.11"
   }
 }
