add product data table with sample data
- add github pages workflow

--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
     "core-js": "^3.39.0",
+    "datatables.net-bs5": "^2.1.8",
+    "datatables.net-dt": "^2.1.8",
+    "datatables.net-react": "^1.0.0",
+    "datatables.net-responsive-dt": "^3.0.3",
+    "datatables.net-select-dt": "^2.1.0",
     "date-fns": "^4.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
